# My-first-perceptron-C-

./: .gitignore  LICENSE  README.md  build.sh  mnist.sh  read_dataset_images.sh  read_dataset_labels.sh
src/: CMakeLists.txt  DataHandling.h  LoopLogger.cpp  LoopLogger.h  MnistModel.cpp  read_dataset.cpp
src/Network/: Components.h  Types.hpp
